@@ -1,9 +1,6 @@
-DIST rustc-1.3.0-i686-unknown-linux-gnu.tar.gz 90445379 SHA256 7a3add3d229047bc68b929ba7b5f5d5796333f29e160c18c2a0ff24f643fab6b SHA512 afd001c1c285f12c13c0a9ecf0788f47ab72f069c1e1c5ec568973691ef2223c075fb99324e8245012e8a21003ea4fc63d874de99b95065aa9d09081798e09d5 WHIRLPOOL d273387d6eea540bf3a4bff96b5f754537ed265348661d412d37280f6d89fc726ed46fa03995b26eb444ac18e6c41f07d23c3c6844c7aaa00d2cc3970bad2f40
-DIST rustc-1.3.0-x86_64-unknown-linux-gnu.tar.gz 89444657 SHA256 eb243288615471a35106a9a384abd2888f1c0b9ee80ccff2c1bc034dd58b8b11 SHA512 7cc217fe2d1d58289f2e94c67c57506fd5fe7d85ed62e39daf11352c0887e87c12cb986b1de3bff07034da39784ef0f3901520ab28f34458dff7a6377f1c53b4 WHIRLPOOL 4cf1ef5473309dd23a6560368ed11ed9eb197a4f375fb4a4ec2904d06a4953341f58737766192dd30d35daf22e261dabed24a740d50585bb0714d6df45805a01
-DIST rustc-1.4.0-i686-unknown-linux-gnu.tar.gz 94518830 SHA256 62730155ffaae2b30e215dbfc30381bf7b49c74c873f85febd82390423a701a1 SHA512 f6ac252794bef22ee4db1dea23aa8bfcae516ae044654d627c5437947a516bd58d154037ea53cb4b4880f1565d6214334411d6f78a7e7ea009176b6b401146cd WHIRLPOOL 6b4fcfa06ba62c311ec986c9b2978f4b3107b5572f5f0ce8b5fdf2eae4b06c5ba54679e524edf0d193f7e9496d49a113182ba69cde987050eb8631ed9eb3186e
-DIST rustc-1.4.0-x86_64-unknown-linux-gnu.tar.gz 93494234 SHA256 2edff1f6d25c28f07d4468da40ac1605b4d3ad0cf7bf8b6cb19c068f15013a48 SHA512 bbfbec4f6f825555d01bf63b70561c13f7047f94a80dc8d9c06d44bb9ab50c23cc83b58c33b2679bdb6c2d5f8cc59bb393be08720daabf85aa420d30c959a375 WHIRLPOOL aa9d4a0028790a2a3890aca8c07ca00f0485358c9e13f99dea8f1bef6818755b4758ad64b4a0c92c0bdf865339505a0add7b0925aaeca9eac7f36836327eea5f
-EBUILD rust-bin-1.3.0.ebuild 2423 SHA256 de2a1d6f490d089b2c86c4195b8feba5435353f8cb509fe20b41fcf0af7977b5 SHA512 1eaabb895f1ae2f0b895b42f1b8fe924505a0c5c2cea38f7a705d408450d89ae1d77915659a1bd65e433b631fdd7d1c91851d951ebec454a5c11851035b3ffbb WHIRLPOOL f759f45785c0382bc7f46dc04b463eeae8329242bd410f651d022595ea71096029d198e4d89ab2e08918024f7eb43a5e79c4197f801eca58c3e6a6baebfc0fd0
-EBUILD rust-bin-1.4.0.ebuild 2423 SHA256 de2a1d6f490d089b2c86c4195b8feba5435353f8cb509fe20b41fcf0af7977b5 SHA512 1eaabb895f1ae2f0b895b42f1b8fe924505a0c5c2cea38f7a705d408450d89ae1d77915659a1bd65e433b631fdd7d1c91851d951ebec454a5c11851035b3ffbb WHIRLPOOL f759f45785c0382bc7f46dc04b463eeae8329242bd410f651d022595ea71096029d198e4d89ab2e08918024f7eb43a5e79c4197f801eca58c3e6a6baebfc0fd0
-MISC ChangeLog 2401 SHA256 bb5305a775fcbdb9ded92215f68a8e4cd3e6b18f6bb0cd7a635362a172b66e98 SHA512 8556fe29e8e976570148ac0f2ae0d07c6479924855ffae43bedfefd8ecc51193428696899dbc351c137203405e7ecb2f5384a653416390f24a600112176cfd0e WHIRLPOOL 37163049c17d1ceb789a12b65b92106848f041b769b5e875375067d6e5c2a70859dd038a6bb1df65bade475cf133fa2a7c6c123951186066e9da5c0b366d82b5
+DIST rust-1.4.0-i686-unknown-linux-gnu.tar.gz 103375638 SHA256 a9ced420c78b7819101df0428e3a86e492e97db29f39062dae890cbd9b735742 SHA512 bdcd1e7d310d974bffaf4286254786ea3a84fb28424e8f297f49fa62c96d95e103e3972fbbab2daa0a6d8be47e54227dc642dbf24b9ec6bf8902d682f642eb88 WHIRLPOOL d0af51847fffc530c7976386b3d89141eba31f493b098a24b84d7f9d7d7824b38ee8b5b6dd8ba81f0a088e3fb78dc340ed673c0010c455e20d9df4296f443cef
+DIST rust-1.4.0-x86_64-unknown-linux-gnu.tar.gz 102647840 SHA256 2de2424b50ca2ab3a67c495b6af03c720801a2928ad30884438ad0f5436ac51d SHA512 c876a88ba13c63a92702011ffa1e24a777c8326cb1cb92329ee5b7385c9cf64bc3ccb5097510a0931d201d8eb571795c0d74b626d6cd86efb856f4afea1c34e8 WHIRLPOOL e72dd5088aacf27e4749135406234dd603f69bf0bcfc2d2ed5c4165a1a8f1023d76cf5c25b2226c1407180458f2cf5fd12a778397dd16fe02886eb1f42a1407c
+EBUILD rust-bin-1.4.0.ebuild 2841 SHA256 a9c6c81031577714b612682a2a9353f04a963c3f5fe9d241f101f5421544049a SHA512 7a42aaed5e0919d9f4e4e48a3ae9f9151e17e7a55bda42600b2991d4d84220a0f50577bc783430fc9d64ea5c67c122e0625047c40c0e5c3fad2df11375792d9b WHIRLPOOL 8625de5906da5c83bb67ff868d23298012801e1d80ab5c0c84ee42090a879d0d9169e45aaa604febdd76f135fe5b68983044a3cf6a1e19ca54ac76eb34eaf894
+MISC ChangeLog 2634 SHA256 ceda48dedebba9879c980434eece560ae4722c9077868c2c20d4c249cfa9f889 SHA512 04707af2012d70ca07045c32e03974add20bf519a05816af681a3b77cfa59ab211a246b6cd34cdec2d6f5b8b93446fde6b50c81b5e040e4737fc5eca1a1592db WHIRLPOOL 23023266114c999a683b1d8b1ff9d2dac6956a40ebfccdc13f2298e0584172de2499449c6189c9b189a238532dc61b3b38f11b9638c1bde534e3ecbaa4566708
 MISC ChangeLog-2015 2038 SHA256 e4068a0c931902bcf38fb040938d9641d403223b6a21eb42db2baa82a097dcce SHA512 7fb709111dac852fbb2cb64d04f49280a27adb02e9fa701f513287a6f390888d796bb661563dd6c4616e15a820fcd63166828090adc0ce90f67db3e8e3a7591d WHIRLPOOL 877f5260ebcb89f7e51021e940248a071210a32fd92d0d759a5d9b64b0e3a5304391f82aae2e420e25edf794df503f7e65294a7924e0d2f6861bb06414c8b67c
 MISC metadata.xml 243 SHA256 18abd81b04a3651cbf1290466163ecb9269199286408c133021daa0e74869f47 SHA512 4bdc4acc90c8a444f645f1f058d2eed96adddb53fc28554f8eca840c744c320158daf264e28b644d67dcda59299d921f84eddbdd471b780b2e5bcae78ddbaaae WHIRLPOOL 0643256f713a85f274a4d748f885edc6db04407fb28eaf3c73803b96c8a9d6c79c15ce162c13096958d0f10500f8edf8d1ac0833f2d256988686ad987811622a
