@@ -69,3 +69,11 @@
 
   Package-Manager: portage-2.2.20.1
 
+*rust-bin-1.4.0 (18 Nov 2015)
+
+  18 Nov 2015; Boris Faure <gentoo@boris.fau.re> +rust-bin-1.4.0.ebuild:
+  version bump
+
+  Add "cargo" and "doc" USE flags to install cargo and/or the documentation
+
+  Package-Manager: portage-2.2.20.1
